--- a/index.html
+++ b/index.html
@@ -3,11 +3,50 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Home</title>
+        <link href='https://fonts.googleapis.com/css?family=Fira Code' rel='stylesheet'>
+        <title>OsuDB</title>
         <link rel="stylesheet" href="styles.css">
+
+        <div class="header">
+            <a href="index.html" class="headBtn">Main</a>
+            <a href="input.html" class="headBtn">Input</a>
+            <a href="raw.html" class="headBtn">Raw DB</a>
+        </div>
+
     </head>
 
     <body>
-        <h1>Kawaii :3</h1>
+        <div class="container">
+            <div class="card visits">
+                <h2>TOTAL Site Visits:</h2>
+                <h1>0</h1>
+                <a href="#">View More Info</a>
+            </div>
+
+            <div class="card most-used-passwords">
+                <h2>Most Used Passwords:</h2>
+            </div>
+
+            <div class="card passwords-added-monthly">
+                <h2>Passwords Added (Monthly):</h2>
+            </div>
+
+            <div class="card right-side">
+                <h2>Extra Information:</h2>
+            </div>
+
+            <div class="card website-shout">
+                <h1>Website Shout:</h1>
+            </div>
+
+            <div class="card all-time-passwords">
+                <h2>All Time Passwords:</h2>
+            </div>
+
+            <div class="card most-active-usrs">
+                <h2>Most Active Usrs:</h2>
+            </div>
+
+        </div>
     </body>
 </html>
