Fixed multiple requests setting count to 0. Fixed Lemons breaking server. Fixed Raw DB button.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header">
             <a href="index.html" class="headBtn">Main</a>
             <a href="input.html" class="headBtn">Input</a>
-            <a href="raw.html" class="headBtn">Raw DB</a>
+            <a href="https://server.osudb.online/passwords" class="headBtn">Raw DB</a>
         </div>
 
     </head>
