Added pie chart

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             </div>
             <div id="right-block">
                 <div class="card" id="pie-chart">
-                    <canvas id="chart"></canvas>
+                    <div id="chart-div">
+                        <canvas id="chart"> No pie chart for you. </canvas>
+                    </div>
                     <div id="users">
                         <h1 class="heading-text-card">top users</h1>
                     </div>
@@ -66,4 +68,5 @@
     </body>
 
     <script src="script.js"></script>
+    <script src="piechart.js"></script>
 </html>
